--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Basic template of a node + typescript project",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -fr dist && tsc",
+    "build": "tsc",
     "lint": "eslint --fix src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js"
   },
   "author": "Thomas VEILLARD",
   "license": "ISC",
@@ -18,7 +19,7 @@
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.2.0",
     "jest": "^29.3.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -27,6 +28,7 @@
     "joi": "^17.7.0",
     "pg": "^8.8.0",
     "ts-jest": "^29.0.3",
+    "tsc": "^2.0.4",
     "typeorm": "^0.3.10"
   },
   "jest": {
