--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     image: postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_DB: iam
+      POSTGRES_DB: test
       POSTGRES_PASSWORD: postgres
     ports:
       - 5434:5432
     volumes:
-      - ./docker/postgres:/var/lib/postgresql/data
+      - ./docker/postgres:/var/lib/postgresql/data-test
