--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.2.0",
     "jest": "^29.3.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "ts-jest": "^29.0.3",
+    "tsc": "^2.0.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "pg": "^8.8.0",
-    "ts-jest": "^29.0.3",
-    "tsc": "^2.0.4",
     "typeorm": "^0.3.10"
   },
   "jest": {
