Session 2: Step 2: Add register user route

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     image: postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_DB: test
+      POSTGRES_DB: iam
       POSTGRES_PASSWORD: postgres
     ports:
       - 5434:5432
