--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "tsc && cp .env ./dist/.env",
     "lint": "eslint --fix src",
     "test": "jest",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "start:watch": "nodemon -w dist dist/index.js",
+    "build:watch": "tsc -w",
+    "compile-schemas": "json2ts -i schemas -o types"
   },
   "author": "Thomas VEILLARD",
   "license": "ISC",
@@ -19,14 +22,17 @@
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.2.0",
     "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.3",
-    "ts-jest": "^29.0.3",
     "tsc": "^2.0.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
+    "fastify": "^4.11.0",
+    "json-schema-to-typescript": "^11.0.2",
     "pg": "^8.8.0",
     "typeorm": "^0.3.10"
   },
