--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.2.0",
     "jest": "^29.3.1",
+    "ts-jest": "^29.0.5",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3",
     "tsc": "^2.0.4"
@@ -29,7 +30,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.11.0",
     "json-schema-to-typescript": "^11.0.2",
