--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Thomas VEILLARD",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.3",
     "@types/node": "^15.12.2",
@@ -22,10 +23,10 @@
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.2.0",
     "jest": "^29.3.1",
-    "ts-jest": "^29.0.5",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.3",
-    "tsc": "^2.0.4"
+    "ts-jest": "^29.0.5",
+    "tsc": "^2.0.4",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
