--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "test": "jest",
     "start": "node dist/index.js",
     "start:watch": "nodemon -w dist dist/index.js",
-    "build:watch": "tsc -w",
-    "compile-schemas": "json2ts -i schemas -o types"
+    "build:watch": "tsc -w"
   },
-  "author": "Thomas VEILLARD",
+  "author": "Samuel BADER & Enzo FILANGI",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -29,6 +28,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -43,6 +43,7 @@
     "testEnvironment": "node",
     "modulePathIgnorePatterns": [
       "dist"
-    ]
+    ],
+    "testTimeout": 30000
   }
 }
