--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && cp .env ./dist/.env",
     "lint": "eslint --fix src",
-    "test": "jest",
+    "test": "jest --runInBand",
     "start": "node dist/index.js",
     "start:watch": "nodemon -w dist dist/index.js",
     "build:watch": "tsc -w"
