--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.2.0",
     "jest": "^29.3.1",
+    "json-schema-to-ts": "^2.6.2",
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.5",
     "tsc": "^2.0.4",
